<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activityen Tituloak-->
    <string name="app_name">Larrabetzu</string>
    <string name="tituloa_activity_agenda">Agenda</string>
    <string name="tituloa_activity_berriak">Eguneko Berriak</string>
    <string name="tituloa_activity_elkarteak">Elkarteak</string>
    <string name="tituloa_activity_ekintzak">Ekintzak</string>
    <string name="tituloa_activity_eskura">Eskura</string>
    <string name="tituloa_activity_hobespenak">Hobespenak</string>
    <string name="tituloa_activity_kontaktua">Gugaz Kontaktatu</string>
    <string name="tituloa_activity_menua">larrabetzu</string>
    <string name="tituloa_activity_webnavigation">Web</string>
    <string name="tituloa_activity_zerbitzuak">Zerbitzuak</string>
    <string name="tituloa_activity_loginpush">Login</string>
    <string name="tituloa_activity_menupush">Abisuak</string>

    <!-- Edit Text-->
    <string name="text_erabiltzailea">Erabiltzailea</string>
    <string name="text_pasahitza">Pasahitza</string>

    <!-- Button Text-->
    <string name="text_login">Login</string>
    <string name="text_reset_pass">Berrezarri pasahitza</string>
        <!--App-aren Menua-->
        <string name="text_berriak">Berriak</string>
        <string name="text_agenda">Agenda</string>
        <string name="text_elkarteak">Elkarteak</string>
        <string name="text_zerbitzuak">Zerbitzuak</string>
        <string name="text_hobespenak">Hobespenak</string>
        <string name="text_kontaktua">Kontaktua</string>
        <string name="text_larrabetzu_eskura">Larrabetzu Eskura</string>
        <string name="text_larrabetzu">#larrabetzu</string>


    <!-- TextView -->
    <string name="text_elkarteentzat">Elkarteentzat Abisuen panela</string>
    <string name="text_elkarteentzat_azalpena">Atal hau elkarteentzat bakarrik da.
        Bertatik erabiltzaileei nahi duten abisuak bidali al dira.
        Informazio gehiago nahi badozu bidali e-mail bat  ;)</string>

    <!-- Menuak -->
    <string name="elkarbanatu">Elkarbanatu</string>
    <string name="antolatzaileak">Antolatzaileak</string>
    <string name="alarma">Alarma</string>

</resources>