<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/layout_loginpush_erabiltzailea"
        android:hint="@string/text_erabiltzailea"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/layout_loginpush_pasahitza"
        android:hint="@string/text_pasahitza"
        />


    <Button
        android:id="@+id/layout_loginpush_ok"
        android:text="@string/text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        />

    <Button
        android:id="@+id/layout_reset_pass"
        android:text="@string/text_reset_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_elkarteentzat"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@color/grisa"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_elkarteentzat_azalpena"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

</LinearLayout>